--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navidad en la Mesa</title>
-    <!-- Tailwind via CDN para desarrollo rápido, en producción Vite lo procesará si se configura PostCSS, pero dejaremos CDN para asegurar estilos sin config extra -->
+    <!-- Tailwind via CDN para desarrollo rápido -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script>
