Fix: entry main.tsx y build Vite listo para Pages

--- a/index.html
+++ b/index.html
@@ -1,60 +1,17 @@
-<!DOCTYPE html>
+@'
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navidad en la Mesa</title>
-    <!-- Tailwind via CDN para desarrollo rápido -->
-    <script src="https://cdn.tailwindcss.com"></script>
+
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['Inter', 'sans-serif'],
-              serif: ['Lora', 'serif'],
-            },
-            colors: {
-              christmas: {
-                red: '#B91C1C',
-                green: '#15803D',
-                gold: '#A16207',
-                accent: '#FCD34D',
-                cream: '#FFFCF5',
-                dark: '#1F2937'
-              }
-            }
-          }
-        },
-        darkMode: 'class'
-      }
-    </script>
-    <style>
-      *:focus-visible {
-        outline: 4px solid #FCD34D;
-        outline-offset: 2px;
-      }
-      html {
-        scroll-behavior: smooth;
-      }
-    </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "vite": "https://aistudiocdn.com/vite@^7.2.6",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
-  }
-}
-</script>
-</head>
-  <body class="bg-christmas-cream text-christmas-dark transition-colors duration-300">
+
+  </head>
+  <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+'@ | Set-Content -Encoding UTF8 .\index.html
