UI: hero principal con copy Navidad en la Mesa

--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
-@'
-<!doctype html>
+﻿<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navidad en la Mesa</title>
-
+    <meta name="description" content="Tu asistente culinario festivo y accesible: planifica tu menú, organiza recetas y cocina sin estrés desde el móvil." />
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-'@ | Set-Content -Encoding UTF8 .\index.html
