SEO: metas básicas (title/description/OG/Twitter/canonical)

--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navidad en la Mesa</title>
-    <meta name="description" content="Tu asistente culinario festivo y accesible: planifica tu menú, organiza recetas y cocina sin estrés desde el móvil." />
+
+    <title>Navidad en la Mesa — Recetario navideño gratis</title>
+    <meta name="description" content="Recetario navideño gratis para organizar menús, recetas y tiempos sin estrés. Diseño claro y pensado para móvil." />
+    <link rel="canonical" href="https://luismiquel.github.io/Navidad-en-la-Mesa/" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Navidad en la Mesa — Recetario navideño gratis" />
+    <meta property="og:description" content="Organiza tu menú navideño, recetas y tiempos desde el móvil. Gratis, simple y accesible." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://luismiquel.github.io/Navidad-en-la-Mesa/" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Navidad en la Mesa — Recetario navideño gratis" />
+    <meta name="twitter:description" content="Organiza tu menú navideño, recetas y tiempos desde el móvil. Gratis, simple y accesible." />
+
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
