Fallback visible: hero básico para Navidad en la Mesa

--- a/index.html
+++ b/index.html
@@ -5,23 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Navidad en la Mesa — Recetario navideño gratis</title>
-    <meta name="description" content="Recetario navideño gratis para organizar menús, recetas y tiempos sin estrés. Diseño claro y pensado para móvil." />
+    <meta name="description" content="Recetario navideño gratis para organizar menús y recetas sin estrés. Pensado para móvil." />
     <link rel="canonical" href="https://luismiquel.github.io/Navidad-en-la-Mesa/" />
-
-    <!-- Open Graph -->
-    <meta property="og:title" content="Navidad en la Mesa — Recetario navideño gratis" />
-    <meta property="og:description" content="Organiza tu menú navideño, recetas y tiempos desde el móvil. Gratis, simple y accesible." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://luismiquel.github.io/Navidad-en-la-Mesa/" />
-
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Navidad en la Mesa — Recetario navideño gratis" />
-    <meta name="twitter:description" content="Organiza tu menú navideño, recetas y tiempos desde el móvil. Gratis, simple y accesible." />
-
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
-  <body>
+
+  <body style="margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;">
+    <!-- Fallback visible -->
+    <main style="min-height:100vh;display:flex;align-items:center;justify-content:center;background:#FFFCF5;color:#1F2937;">
+      <section style="max-width:600px;padding:2rem;text-align:center;">
+        <h1 style="font-size:2rem;margin-bottom:1rem;">
+          Navidad en la Mesa
+        </h1>
+        <p style="font-size:1.1rem;margin-bottom:2rem;">
+          Tu asistente culinario festivo y accesible.
+        </p>
+        <a
+          href="#"
+          style="display:inline-block;padding:0.75rem 1.5rem;
+                 background:#15803D;color:white;
+                 text-decoration:none;border-radius:6px;
+                 font-weight:600;">
+          Entrar a la cocina
+        </a>
+      </section>
+    </main>
+
+    <!-- React -->
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
