--- a/index.html
+++ b/index.html
@@ -1,37 +1,44 @@
 ﻿<!doctype html>
-<html lang="es">
+<html lang="es-ES">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Navidad en la Mesa — Recetario navideño gratis</title>
-    <meta name="description" content="Recetario navideño gratis para organizar menús y recetas sin estrés. Pensado para móvil." />
+    <meta name="description" content="Recetario navideño gratis y accesible: recetas, pasos guiados y lista de compra. Funciona perfecto en móvil." />
     <link rel="canonical" href="https://luismiquel.github.io/Navidad-en-la-Mesa/" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Navidad en la Mesa — Recetario navideño gratis" />
+    <meta property="og:description" content="Recetas navideñas con pasos guiados y lista de compra. Gratis y pensado para móvil." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://luismiquel.github.io/Navidad-en-la-Mesa/" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Navidad en la Mesa — Recetario navideño gratis" />
+    <meta name="twitter:description" content="Recetas navideñas con pasos guiados y lista de compra. Gratis y pensado para móvil." />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+
+    <!-- Datos estructurados -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Navidad en la Mesa",
+      "url": "https://luismiquel.github.io/Navidad-en-la-Mesa/",
+      "inLanguage": "es-ES",
+      "description": "Recetario navideño gratis y accesible: recetas, pasos guiados y lista de compra."
+    }
+    </script>
   </head>
-
-  <body style="margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;">
-    <!-- Fallback visible -->
-    <main style="min-height:100vh;display:flex;align-items:center;justify-content:center;background:#FFFCF5;color:#1F2937;">
-      <section style="max-width:600px;padding:2rem;text-align:center;">
-        <h1 style="font-size:2rem;margin-bottom:1rem;">
-          Navidad en la Mesa
-        </h1>
-        <p style="font-size:1.1rem;margin-bottom:2rem;">
-          Tu asistente culinario festivo y accesible.
-        </p>
-        <a
-          href="#"
-          style="display:inline-block;padding:0.75rem 1.5rem;
-                 background:#15803D;color:white;
-                 text-decoration:none;border-radius:6px;
-                 font-weight:600;">
-          Entrar a la cocina
-        </a>
-      </section>
-    </main>
-
-    <!-- React -->
+  <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+
+    <!-- IMPORTANTE: ruta RELATIVA (sin / delante) para que funcione con base /Navidad-en-la-Mesa/ -->
+    <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
