Fix: index.html correcto + entry React (main.tsx)

--- a/index.html
+++ b/index.html
@@ -1,44 +1,17 @@
 ﻿<!doctype html>
-<html lang="es-ES">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Navidad en la Mesa — Recetario navideño gratis</title>
-    <meta name="description" content="Recetario navideño gratis y accesible: recetas, pasos guiados y lista de compra. Funciona perfecto en móvil." />
-    <link rel="canonical" href="https://luismiquel.github.io/Navidad-en-la-Mesa/" />
-
-    <!-- Open Graph -->
-    <meta property="og:title" content="Navidad en la Mesa — Recetario navideño gratis" />
-    <meta property="og:description" content="Recetas navideñas con pasos guiados y lista de compra. Gratis y pensado para móvil." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://luismiquel.github.io/Navidad-en-la-Mesa/" />
-
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Navidad en la Mesa — Recetario navideño gratis" />
-    <meta name="twitter:description" content="Recetas navideñas con pasos guiados y lista de compra. Gratis y pensado para móvil." />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-
-    <!-- Datos estructurados -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebSite",
-      "name": "Navidad en la Mesa",
-      "url": "https://luismiquel.github.io/Navidad-en-la-Mesa/",
-      "inLanguage": "es-ES",
-      "description": "Recetario navideño gratis y accesible: recetas, pasos guiados y lista de compra."
-    }
-    </script>
+    <title>Navidad en la Mesa</title>
+    <meta name="description" content="Recetario navideño accesible con pasos, temporizadores y lista de compra." />
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
-
-    <!-- IMPORTANTE: ruta RELATIVA (sin / delante) para que funcione con base /Navidad-en-la-Mesa/ -->
-    <script type="module" src="src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
