SEO: og:image y metas para Vercel (Navidad en la Mesa)

--- a/index.html
+++ b/index.html
@@ -3,13 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navidad en la Mesa</title>
-    <meta name="description" content="Recetario navideño accesible con pasos, temporizadores y lista de compra." />
-    <link rel="icon" href="./favicon.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <title>Navidad en la Mesa | Recetario navideño gratis</title>
+    <meta name="description" content="Recetario navideño gratis y accesible para organizar menús y cocinar sin estrés desde el móvil." />
+
+    <link rel="canonical" href="https://navidad-en-la-mesa.vercel.app/" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Navidad en la Mesa | Recetario navideño gratis" />
+    <meta property="og:description" content="Organiza tu menú y cocina paso a paso. Gratis, simple y pensado para móvil." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://navidad-en-la-mesa.vercel.app/" />
+    <meta property="og:image" content="https://navidad-en-la-mesa.vercel.app/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="es_ES" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Navidad en la Mesa | Recetario navideño gratis" />
+    <meta name="twitter:description" content="Recetas navideñas y pasos claros para cocinar sin estrés. Gratis." />
+    <meta name="twitter:image" content="https://navidad-en-la-mesa.vercel.app/og-image.png" />
+
+    <script type="application/ld+json">
+    {
+      "@context":"https://schema.org",
+      "@type":"WebSite",
+      "name":"Navidad en la Mesa",
+      "url":"https://navidad-en-la-mesa.vercel.app/",
+      "inLanguage":"es-ES",
+      "description":"Recetario navideño gratis y accesible para organizar menús y cocinar sin estrés desde el móvil."
+    }
+    </script>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
