--- a/index.html
+++ b/index.html
@@ -1,44 +1,60 @@
-﻿<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Navidad en la Mesa | Recetario navideño gratis</title>
-    <meta name="description" content="Recetario navideño gratis y accesible para organizar menús y cocinar sin estrés desde el móvil." />
-
-    <link rel="canonical" href="https://navidad-en-la-mesa.vercel.app/" />
-
-    <!-- Open Graph -->
-    <meta property="og:title" content="Navidad en la Mesa | Recetario navideño gratis" />
-    <meta property="og:description" content="Organiza tu menú y cocina paso a paso. Gratis, simple y pensado para móvil." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://navidad-en-la-mesa.vercel.app/" />
-    <meta property="og:image" content="https://navidad-en-la-mesa.vercel.app/og-image.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:locale" content="es_ES" />
-
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Navidad en la Mesa | Recetario navideño gratis" />
-    <meta name="twitter:description" content="Recetas navideñas y pasos claros para cocinar sin estrés. Gratis." />
-    <meta name="twitter:image" content="https://navidad-en-la-mesa.vercel.app/og-image.png" />
-
-    <script type="application/ld+json">
-    {
-      "@context":"https://schema.org",
-      "@type":"WebSite",
-      "name":"Navidad en la Mesa",
-      "url":"https://navidad-en-la-mesa.vercel.app/",
-      "inLanguage":"es-ES",
-      "description":"Recetario navideño gratis y accesible para organizar menús y cocinar sin estrés desde el móvil."
-    }
+    <title>Navidad en la Mesa</title>
+    <!-- Tailwind via CDN para desarrollo rápido -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            fontFamily: {
+              sans: ['Inter', 'sans-serif'],
+              serif: ['Lora', 'serif'],
+            },
+            colors: {
+              christmas: {
+                red: '#B91C1C',
+                green: '#15803D',
+                gold: '#A16207',
+                accent: '#FCD34D',
+                cream: '#FFFCF5',
+                dark: '#1F2937'
+              }
+            }
+          }
+        },
+        darkMode: 'class'
+      }
     </script>
-  </head>
-
-  <body>
+    <style>
+      *:focus-visible {
+        outline: 4px solid #FCD34D;
+        outline-offset: 2px;
+      }
+      html {
+        scroll-behavior: smooth;
+      }
+    </style>
+  <script type="importmap">
+{
+  "imports": {
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.6",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
+  }
+}
+</script>
+</head>
+  <body class="bg-christmas-cream text-christmas-dark transition-colors duration-300">
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
