--- a/index.html
+++ b/index.html
@@ -24,38 +24,32 @@
                 cream: '#FFFCF5',
                 dark: '#1F2937'
               }
-            },
-            animation: {
-              'spin-slow': 'spin 8s linear infinite',
             }
           }
-        },
-        darkMode: 'class'
+        }
       }
     </script>
     <style>
-      *:focus-visible {
-        outline: 4px solid #FCD34D;
-        outline-offset: 2px;
-      }
+      *:focus-visible { outline: 4px solid #FCD34D; outline-offset: 2px; }
       .scrollbar-hide::-webkit-scrollbar { display: none; }
       .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
+      body { -webkit-tap-highlight-color: transparent; }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
   }
 }
 </script>
-</head>
-  <body class="bg-christmas-cream text-christmas-dark transition-colors duration-300">
+  </head>
+  <body class="bg-christmas-cream text-christmas-dark">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
